--- a/api/build.gradle
+++ b/api/build.gradle
@@ -4,22 +4,26 @@ plugins {
 	id 'java'
 }
 
-
-
 group = 'se.magnus.microservices.api'
 version = '1.0.0-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
+	maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
+
 }
 
 dependencies {
+
+	implementation('io.springfox:springfox-swagger2:3.0.0-SNAPSHOT')
+	implementation('io.springfox:springfox-swagger-ui:3.0.0-SNAPSHOT')
+	implementation('io.springfox:springfox-spring-webflux:3.0.0-SNAPSHOT')
+
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 }
-
 
 dependencyManagement {
 	imports { mavenBom("org.springframework.boot:spring-boot-dependencies:2.1.0.RELEASE") }
