--- a/microservices/product-service/build.gradle
+++ b/microservices/product-service/build.gradle
@@ -10,15 +10,38 @@ sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
+	maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
+
 }
+ext {
+	mapstructVersion = "1.4.0.Beta1"
+}
+
+sourceCompatibility = JavaVersion.VERSION_1_8
+
 
 dependencies {
 
-	implementation project(':api')
-	implementation project(':util')
 
+
+	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+	testImplementation "org.testng:testng:6.10", "org.easytesting:fest-assert:1.4"
+	annotationProcessor "org.mapstruct:mapstruct-processor:1.4.0.Beta1"
+
+
+	compile project(":util")
+	compile project(":api")
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+}
+tasks.withType(JavaCompile) {
+	options.compilerArgs = [
+			'-Amapstruct.suppressGeneratorTimestamp=true'
+	]
+}
+
+test {
+	useTestNG()
 }
