--- a/microservices/recommendation-service/build.gradle
+++ b/microservices/recommendation-service/build.gradle
@@ -10,11 +10,36 @@ sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
+	maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
+
+}
+ext{
+	mapsStructVersion = "1.3.0.Final"
 }
 
 dependencies {
+
+	compile project(":util")
+	compile project(":api")
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+
+
+	implementation('io.springfox:springfox-swagger2:3.0.0-SNAPSHOT')
+
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
+	implementation("org.mapstruct:mapstruct:${mapsStructVersion}")
+
+	compileOnly "org.mapstruct:mapstruct-processor:${mapsStructVersion}"
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapsStructVersion}"
+	testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapsStructVersion}"
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'io.projectreactor:reactor-test'
+	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
 }
