--- a/microservices/review-service/build.gradle
+++ b/microservices/review-service/build.gradle
@@ -10,6 +10,8 @@ sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
+	maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
+
 }
 
 dependencies {
